--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ body {
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
   z-index: 10;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 #units {
